--- a/Art_Gallery/templates/login.html
+++ b/Art_Gallery/templates/login.html
@@ -44,7 +44,7 @@
                                     <!-- Register buttons -->
                                     <div class="text-center">
                                         <!-- redirect to registration page put this in login page -->
-                                        <a role="button" type="submit" class="btn btn-sm btn-outline-dark btn-block mb-4" href="/accounts/register">{% translate 'アカウントをお持ちでない方' %}</a>
+                                        <a role="button" type="submit" class="btn btn-sm btn-outline-dark btn-block mb-4" href="/account/register">{% translate 'アカウントをお持ちでない方' %}</a>
                                     </div>
                                     <p class="card-text">{% translate 'または' %}</p>
                                     <button type="button" class="btn btn-link btn-floating mx-1" style="background-color: rgb(0, 102, 255);" title=" {% translate 'フェイスブック' %}">
