--- a/Art_Gallery/templates/checkout.html
+++ b/Art_Gallery/templates/checkout.html
@@ -1,15 +1,6 @@
 {% extends "index.html" %}
 {% load i18n %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Item Checkout</title>
-</head>
-<body>
+{% block checkout %}
     CHECKOUT BUYYY
-</body>
-</html>
+{% endblock %}
