--- a/Art_Gallery/templates/myaccount.html
+++ b/Art_Gallery/templates/myaccount.html
@@ -1,23 +1,5 @@
 {% extends "index.html" %}
 {% load i18n %}
-
-{% block title %} My Account {% endblock %}
-{% load static %}
-{% static "images" as baseUrl %}
 {% block myaccount %}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <h1>MY ACCOUNT</h1>
-        <h2>Account Details</h2>
-        <form action="post">
-            
-        </form>
-    </body>
-    </html>
+<h1>Coming soon</h1>
 {% endblock %}
