--- a/Art_Gallery/templates/register.html
+++ b/Art_Gallery/templates/register.html
@@ -56,7 +56,7 @@
                                 <!-- Login redirect -->
                                 <div class="text-center">
                                     <div class="text-center">
-                                        <a role="button" type="submit" class="btn btn-sm btn-outline-dark btn-block mb-4" href="/accounts/login">{% translate "アカウントをお持ちの方" %}</a>
+                                        <a role="button" type="submit" class="btn btn-sm btn-outline-dark btn-block mb-4" href="/account/login">{% translate "アカウントをお持ちの方" %}</a>
                                     </div>
                                 </div>
                             </div>
