--- a/Art_Gallery/static/css/style.css
+++ b/Art_Gallery/static/css/style.css
@@ -97,10 +97,21 @@ a.company_link:hover {
 	margin: 0 auto; 
 }
 
-/* navbar items (login logout cart) */
+/* outline of text */
 nav .navbar-nav li a{
 	color: rgb(0, 0, 0) !important;
 } 
+
+/* align nav items center */
+.navbar-nav {
+	text-align: center !important;
+}
+
+
+/* navbar bottom border */
+.navbar {
+	border-bottom: ridge rgba(0, 110, 255, 0.3);
+}
 /* resize card when the screen is 1046 or more */
 /* @media (min-width: 1046px) {
 	.card {
@@ -141,4 +152,102 @@ nav .navbar-nav li a{
 	max-height: 190px;
 	opacity: 1;
 	visibility: visible;
+}
+
+/* hamburger button animation */
+#nav-icon {
+	/* controls width and height of strokes and nav toggler bordern */
+	width: 1.5em;
+	height: 1.5em;
+	/* position of all three strokes */
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	/* animation speed */
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
+}
+/* strokes */
+#nav-icon span {
+	display: block;
+	position: absolute;
+	/* thickness of each line */
+	height: 2px;
+	/* length of each line 
+		but doesn't center it left side is fixed
+	*/
+	width: 30px;
+	/* hamburger stroke color */
+	background: #000000;
+	/* keeps animation center */
+	left: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	/* animation speed */
+	-webkit-transition: .15s ease-in-out;
+	-moz-transition: .15s ease-in-out;
+	-o-transition: .15s ease-in-out;
+	transition: .15s ease-in-out;
+  }
+  /* Icon */
+/* first stroke*/
+  #nav-icon span:nth-child(1) {
+	/* how much space from top of div to first stroke */
+	top: 4px;
+  }
+  /* this is the second stroke */
+  #nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
+	/* how much space between top of div and middle stroke */
+	top: 14px;
+  }
+ /* third stroke */
+  #nav-icon span:nth-child(4) {
+	/* how much space between top of div and third stroke */
+	top:24px;
+  }
+   
+/* top stroke animation animates down and disappears */
+  #nav-icon.open span:nth-child(1) {
+	/* make this half of bottom's top which is 20 */
+	top: 12px;
+	/* makes top stroke disappear moving left*/
+	width: 0%;
+	left: 50%;
+  }
+
+/* makes a copy of second stroke and rotate positively */
+  #nav-icon.open span:nth-child(2) {
+	/* rotate positively */
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+  }
+/* makes a copy of second stroke and rotate negatively */
+
+  #nav-icon.open span:nth-child(3) {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+  }
+/* bottom stroke animation animates down and disappears */
+  #nav-icon.open span:nth-child(4) {
+	/* make this half of bottom's top which is 20 */
+	top: 12px;
+	width: 0%;
+	left: 50%;
+  } 
+
+/* dropdown navbar animation */
+.navbar-collapse {
+	-webkit-transition: height .15s ease !important;
+	-o-transition: height .15s ease !important;
+	transition: height .15s ease !important;
 }
