fixed js on hamburger button

--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -346,8 +346,8 @@
 		<script>
 			// for  hamburger animation
 			$(document).ready(function(){
-				$('#nav-icon').click(function(){
-					$(this).toggleClass('open');
+				$('.navbar-toggler').click(function(){
+					$('#nav-icon').toggleClass('open');
 				});
 			});
 		</script>
