--- a/Art_Gallery/templates/login.html
+++ b/Art_Gallery/templates/login.html
@@ -14,7 +14,7 @@
                             <div class="card-body">
                                 <h2 class="card-title p-3">{% translate 'ログイン' %}</h2>
                                 <!-- error messages -->
-                                <div class="ms-auto text-danger">
+                                <div class="text-center text-success">
                                     {% for message in messages %}
                                     <!-- jinja format to print the message -->
                                     <p>{{message}}</p>
